lang/interpret_test/TestAstFunc2/res1.txtar
-- main.mcl --
test "t1" {
	stringptr => 42, # int, not str
}
-- OUTPUT --
# err: errUnify: type error: str != int: /main.mcl @ 2:2-2:18
type error: str != int: /main.mcl @ 2:2-2:18

	stringptr => 42, # int, not str
	^^^^^^^^^^^^^^^^
